index.html updated
update index.html to include some cht characters.

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 	<img src="imgs/SAMOCA_banner_1.png" class="banner" />
 	<div data-role="content">
 		<ul data-role="listview" data-inset="true" class="ui-nodisc-icon ui-alt-icon">
-			<li><a href="#currentExhibits" >Current Exhibits</a></li>
-			<li><a href="#pastExhibits">Past Exhibits</a></li>
+			<li><a href="#currentExhibits" > 目前正展出 </a></li>
+			<li><a href="#pastExhibits"> 过期的展出 </a></li>
 			<li><a href="">Calendar of Events</a></li>
 			<li><a href="#discoverScreen">[ Discover ]</a></li>
 
@@ -68,7 +68,7 @@
 		<a href="#homeScreen" class="ui-btn ui-icon-carat-l ui-btn-icon-notext ui-btn-left ui-nodisc-icon ui-alt-icon">Back</a>
 	</header>
 	<div data-role="content">
-		<h1 class="center">Current Exhibits</h1>
+		<h1 class="center"> 目前正展出 </h1>
 		<ul data-role="listview" data-inset="false" class="ui-nodisc-icon ui-alt-icon">
 			<li><a href="#"><img src="imgs/Westhoff_thumb.png">
 				<h2>Siobhan Westhoff</h2>
@@ -104,7 +104,7 @@
 		<a href="#homeScreen" class="ui-btn ui-icon-carat-l ui-btn-icon-notext ui-btn-left ui-nodisc-icon ui-alt-icon">Back</a>
 	</header>
 	<div data-role="content">
-		<h1 class="center">Past Exhibits</h1>
+		<h1 class="center"> 过期的展出  </h1>
 		<ul data-role="listview" data-inset="false" class="ui-nodisc-icon ui-alt-icon">
 			<li><a href="#"><img src="imgs/GroundSwell_thumb.png">
 				<h2>Groundswell: Design Series II</h2>
